--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^2.3.3"
   },
   "rules": {
