--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,15 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.1",
+    "@fullcalendar/daygrid": "^6.1.1",
+    "@fullcalendar/react": "^6.1.2",
+    "framer-motion": "^8.5.5",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-calendar": "^4.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
