--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/core": "^6.1.1",
     "@fullcalendar/daygrid": "^6.1.1",
     "@fullcalendar/react": "^6.1.2",
+    "axios": "^1.3.0",
     "framer-motion": "^8.5.5",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
