--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,8 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "no-shadow": "off",
+
     "no-console": "off",
     "no-restricted-syntax": [
       "error",
